[package]
name = "nodeagg"
version = "0.1.0"
authors = ["Yuki Yamaura <ymruki@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Expand nodeset expression"
homepage = "https://github.com/yamaura/nodeagg"
repository = "https://github.com/yamaura/nodeagg"
readme = "README.md"
edition = "2021"
keywords = ["hpc", "cluster", "administration"]
categories = ["command-line-interface", "command-line-utilities", "parser-implementations"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
combine = { version = "4.6.4", features = ["std"] }
itertools = "0.10.3"

# dependencies for commandl line utils
clap = { version = "3.1.12", features = ["derive"], optional = true }

[features]
cmdline = ["clap"]

[[bin]]
name = "nodeagg"
path = "src/main.rs"
required-features = ["cmdline"]
